# tarea_recuperativa

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  Logger.cpp  Logger.hpp  PerfectHash.cpp  PerfectHash.hpp
src/cpp/: main.cpp
src/cpp/lib/: Logger.cpp  PerfectHash.cpp  PerfectHash.hpp  PrimeGen.cpp
src/py/: data.json  script.py
src/typ/: main.typ  meta.typ  preamble.typ
